[gd_scene load_steps=6 format=3 uid="uid://lju0stvnpsqp"]

[ext_resource type="Script" uid="uid://cnkw4k2wu1fo6" path="res://scripts/MainMenu.gd" id="1_yqorp"]
[ext_resource type="Script" uid="uid://dka5pdxg4256u" path="res://scripts/DifficultyMenu.gd" id="2_0ykhv"]
[ext_resource type="Script" uid="uid://ichbwfcmgoju" path="res://scripts/LoadGameMenu.gd" id="3_l72w3"]
[ext_resource type="Script" uid="uid://cberyohrqoujm" path="res://scripts/PreferencesMenu.gd" id="4_l72w3"]
[ext_resource type="Script" uid="uid://bludn4fcy8y8e" path="res://scripts/AboutMenu.gd" id="5_826wr"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="MainMenuContent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -162.5
offset_right = 125.0
offset_bottom = 162.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MainMenuContent/MarginContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.482353)

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContent/MarginContainer"]
layout_mode = 2

[node name="MainTitle" type="Label" parent="MainMenuContent/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ZOMBON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenuContent/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "NEW GAME"

[node name="LoadGameButton" type="Button" parent="MainMenuContent/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "LOAD GAME"

[node name="PreferencesButton" type="Button" parent="MainMenuContent/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "PREFERENCES"

[node name="AboutButton" type="Button" parent="MainMenuContent/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "ABOUT"

[node name="ExitButton" type="Button" parent="MainMenuContent/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "EXIT GAME"

[node name="DifficultyMenu" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_0ykhv")

[node name="MarginContainer" type="MarginContainer" parent="DifficultyMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -89.0
offset_right = 125.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="DifficultyMenu/MarginContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.482353)

[node name="VBoxContainer" type="VBoxContainer" parent="DifficultyMenu/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="MainTitle" type="Label" parent="DifficultyMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ZOMBON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="DifficultyMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "SELECT DIFFICULTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EasyButton" type="Button" parent="DifficultyMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "EASY"

[node name="MediumButton" type="Button" parent="DifficultyMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "MEDIUM"

[node name="HardButton" type="Button" parent="DifficultyMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "HARD"

[node name="BackButton" type="Button" parent="DifficultyMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back to Main Menu"

[node name="LoadGameMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_l72w3")

[node name="LoadMenuMarginContainer" type="MarginContainer" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 198.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LoadGameMenu/LoadMenuMarginContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.482353)

[node name="LoadMenuVBoxContainer" type="VBoxContainer" parent="LoadGameMenu/LoadMenuMarginContainer"]
layout_mode = 2

[node name="MainTitle" type="Label" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ZOMBON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadMenuTitle" type="Label" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "LOAD GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadMenuMessageLabel" type="Label" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="LoadMenuSlotContainer" type="VBoxContainer" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer"]
layout_mode = 2

[node name="LoadMenuNavigationContainer" type="HBoxContainer" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadMenuPrevButton" type="Button" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer/LoadMenuNavigationContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "< Prev"

[node name="LoadMenuPageLabel" type="Label" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer/LoadMenuNavigationContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Page 1 of 20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadMenuNextButton" type="Button" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer/LoadMenuNavigationContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next >"

[node name="LoadMenuBackButton" type="Button" parent="LoadGameMenu/LoadMenuMarginContainer/LoadMenuVBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"

[node name="PreferencesMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_l72w3")

[node name="MarginContainer" type="MarginContainer" parent="PreferencesMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -130.0
offset_right = 122.5
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PreferencesMenu/MarginContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.482353)

[node name="VBoxContainer" type="VBoxContainer" parent="PreferencesMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MainTitle" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ZOMBON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "PREFERENCES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.529412, 0, 1)
text = "Click to change the controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PreferencesMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="HBoxContainer(LeftContainer)" type="HBoxContainer" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(LeftContainer)"]
layout_mode = 2
text = "Move Left:"

[node name="LeftButton" type="Button" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(LeftContainer)"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "???"

[node name="HBoxContainer(RightContainer)" type="HBoxContainer" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(RightContainer)"]
layout_mode = 2
text = "Move Right:"

[node name="RightButton" type="Button" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(RightContainer)"]
custom_minimum_size = Vector2(125, 50)
layout_direction = 2
layout_mode = 2
text = "???"

[node name="HBoxContainer(JumpContainer)" type="HBoxContainer" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(JumpContainer)"]
layout_mode = 2
text = "Jump:"

[node name="JumpButton" type="Button" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(JumpContainer)"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
text = "???"

[node name="HBoxContainer(AtackContainer)" type="HBoxContainer" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(AtackContainer)"]
layout_mode = 2
text = "Atack:"

[node name="AttackButton" type="Button" parent="PreferencesMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer(AtackContainer)"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
text = "???"

[node name="ResetButton" type="Button" parent="PreferencesMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset Buttons"

[node name="PreferencesBackButton" type="Button" parent="PreferencesMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back to Main Menu"

[node name="AboutMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_826wr")

[node name="AboutMarginContainer" type="MarginContainer" parent="AboutMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="AboutMenu/AboutMarginContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.482353)

[node name="AboutVBoxContainer" type="VBoxContainer" parent="AboutMenu/AboutMarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MainTitle" type="Label" parent="AboutMenu/AboutMarginContainer/AboutVBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ZOMBON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AboutTitle" type="Label" parent="AboutMenu/AboutMarginContainer/AboutVBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "ABOUT"
horizontal_alignment = 1

[node name="AboutInfoLabel" type="Label" parent="AboutMenu/AboutMarginContainer/AboutVBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Zombon Game
Version 1.0

Created with Godot Engine"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AboutBackButton" type="Button" parent="AboutMenu/AboutMarginContainer/AboutVBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back to Main Menu"

[connection signal="pressed" from="PreferencesMenu/MarginContainer/VBoxContainer/ResetButton" to="PreferencesMenu" method="_on_reset_button_pressed"]
[connection signal="pressed" from="PreferencesMenu/MarginContainer/VBoxContainer/PreferencesBackButton" to="PreferencesMenu" method="_on_back_button_pressed"]
